# omicverse-notebook

./: .gitignore  MANIFEST.in  package.json  pyproject.toml
omicverse_notebook/: __init__.py  preview.py
omicverse_notebook/labextension/: build_log.json  package.json
omicverse_notebook/labextension/static/: 117.031126b67eae95f2213c.js  117.9be8ab491f39bb08a7b2.js  329.96cbf8cab5861a6aaa00.js  509.80644c5b890cdd195fec.js  509.8514c3b8f378e3eecc70.js  509.aba16caf50e9c34915ec.js  631.0ad20d5bc42dee3664cf.js  665.5b439014ef89298a61c1.js  665.b3688b6580576205d99a.js  lib_index_js.1daa81f3508b2afa7551.js  lib_index_js.1daa81f3508b2afa7551.js.map  lib_index_js.7e5d5411c5853a79e3b4.js  lib_index_js.7e5d5411c5853a79e3b4.js.map  lib_index_js.836c2471d9e025922a4f.js  lib_index_js.836c2471d9e025922a4f.js.map  lib_mime_js.6dcf898a57e22f0f5ef1.js  lib_mime_js.6dcf898a57e22f0f5ef1.js.map  lib_renderers_js.64c49dc2357044cb4ca7.js  lib_renderers_js.64c49dc2357044cb4ca7.js.map  lib_renderers_js.e59f1a428188671d008b.js  lib_renderers_js.e59f1a428188671d008b.js.map  remoteEntry.2c50023615ca1eb9c43f.js  remoteEntry.2f6712d7e38c994f36d3.js  remoteEntry.4ffce77151850625c63c.js  remoteEntry.8ab35a217ce6c18dd37c.js  remoteEntry.8ab35a217ce6c18dd37c.js.map  remoteEntry.9b7cb3c0205a4314026e.js  remoteEntry.9b7cb3c0205a4314026e.js.map  remoteEntry.a83194f3b1348eddc197.js  remoteEntry.b8d7725d4c47b85da2e4.js  remoteEntry.b8d7725d4c47b85da2e4.js.map  style_index_css.c14683a44a87317737f6.js  style_index_css.c14683a44a87317737f6.js.map  (+2 more)
scripts/: sync-extra-themes.mjs
src/: index.ts  inspector.ts  renderers.ts  theme.ts
style/: index.css
theme/: variables.css
(+4 files in other folders)
